# bomberman

./: .gitignore  CLAUDE.md
backend/: Cargo.toml  bacon.toml  go.mod  main.go
backend/internal/game/: actor.go  command.go  config.go  event.go  game.go  game_state_manager.go  player.go  types.go
backend/internal/game/map/: map.go  map1.go
backend/internal/lobby/: actor.go  command.go
backend/internal/room/: actor.go  command.go  constant.go  room.go
backend/internal/state/: state.go
backend/internal/ws/: handler.go
backend/internal/ws/message/: game.go  lobby.go  message.go  room.go
backend/src/: game.rs  main.rs  messages.rs  room.rs  state.rs  ws_handler.rs
backend/src/game/: actor.rs  command.rs  config.rs  mod.rs  types.rs  utils.rs
backend/src/game/event/: command.rs  mod.rs
backend/src/game/manager/: map_manager.rs  mod.rs  obj_manager.rs
backend/src/game/map/: map1.rs  mod.rs
backend/src/game/map_data/: mod.rs
backend/src/game/objects/: base.rs  bomb.rs  brick.rs  fire.rs  item.rs  man.rs  mod.rs
backend/src/lobby/: command.rs
backend/src/room/: actor.rs  command.rs  constant.rs  mod.rs  room.rs
backend/src/ws/: handler.rs
backend/src/ws/message/: game.rs  (+2 more)
py-game/: config.py  export_onnx.py  main.py  map_data.py  pyproject.toml  train.py
py-game/ai/: ai_controller.py  danger_map.py  pathfinder.py
py-game/checkpoints/: smoke_test.onnx
py-game/env/: bomberman_env.py
py-game/game/: map_manager.py  obj_manager.py
py-game/game/objects/: base.py  bomb.py  brick.py  fire.py  item.py  man.py
py-game/pandas/: __init__.py
(+176 files in other folders)
