[project]
name = "py-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "stable-baselines3>=2.8.0",
    "torch>=2.0",
    "tensorboard>=2.14",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "onnxscript>=0.1",
]
